# ansi_chess

./: Cargo.toml
src/: ansi_chess.rs  client.rs  main.rs  server.rs
src/test_ins/: Capture_pawn_in.txt  Capture_pawn_out.txt  QueenInvalid_in.txt  QueenInvalid_out.txt  RuyLopez2_in.txt  RuyLopez2_out.txt  RuyLopez_in.txt  pawn_test.txt  test.txt
