[package]
name = "ansi_chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

[lib]
name = "ansi_chess"
path = "src/ansi_chess.rs"

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"
